Fri Jan  2 18:33:07 UTC 2015  Brian Johnson  <johnsonb@ociweb.com>

        * bin/PerlDDS/Run_Test.pm:

          Merged fix from FACE branch needed to convert FooTest5.

        * tests/DCPS/FooTest5/run_test.pl:

          Converted test to use TestFramework.

Fri Jan  2 17:44:21 UTC 2015  Paul Calabrese  <calabrese_p@ociweb.com>

        * bin/dcps_tests.lst:
        * tests/DCPS/TcpReconnect/Args.h:
        * tests/DCPS/TcpReconnect/run_test.pl:

          Tweak the TcpReconnect test to allow for more time between
          reconnects.  Re-enable the scoreboard test.

Fri Jan  2 15:36:03 UTC 2015  Paul Calabrese  <calabrese_p@ociweb.com>

        * bin/dcps_tests.lst:

          Temporarily disable TcpReconnect test until some race
          condition fixes can be made.

Tue Dec 30 20:20:23 UTC 2014  Paul Calabrese  <calabrese_p@ociweb.com>

        * bin/dcps_tests.lst:

          Add TcpReconnect test to test list.

Fri Dec 19 19:44:08 UTC 2014  Paul Calabrese  <calabrese_p@ociweb.com>

        * dds/DCPS/transport/framework/PacketRemoveVisitor.cpp:

          Add a check to bail out of the visitation if a core
          is imminent.  This was seen to happen in a high fan-out
          writer with some back pressure from one or more of the
          readers.

Thu Dec 18 17:33:00 UTC 2014  Peter Oschwald  <oschwaldp@ociweb.com>

        * tests/DCPS/RtpsDiscovery/RtpsDiscoveryTest.cpp:

          Added Error log for discovering multiple participants when
          only 1 excpected.

Thu Dec 18 17:18:55 UTC 2014  Justin Wilson  <wilsonj@ociweb.com>

        * tests/DCPS/RtpsDiscovery/RtpsDiscoveryTest.cpp:
        * tests/DCPS/RtpsDiscovery/run_test.pl:

          Improved debugging messages.

Thu Dec 18 15:10:25 UTC 2014  Paul Calabrese  <calabrese_p@ociweb.com>

        * tests/DCPS/PubScalability/PubScalability.mpc:

          More gyrations to get windows builds to work.

Thu Dec 18 04:16:45 UTC 2014  Paul Calabrese  <calabrese_p@ociweb.com>
